Update ModEntityTickers.java