@@ -11,7 +11,6 @@ import einstein.subtle_effects.util.ParticleSpawnUtil;
 import einstein.subtle_effects.util.SparkType;
 import einstein.subtle_effects.util.Util;
 import me.fzzyhmstrs.fzzy_config.validation.ValidatedField;
-import me.fzzyhmstrs.fzzy_config.validation.number.ValidatedDouble;
 import net.minecraft.client.Minecraft;
 import net.minecraft.core.particles.BlockParticleOption;
 import net.minecraft.core.particles.ParticleTypes;
@@ -19,7 +18,6 @@ import net.minecraft.util.RandomSource;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
-import net.minecraft.world.entity.LightningBolt;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.ambient.Bat;
 import net.minecraft.world.entity.animal.Cat;
@@ -87,7 +85,7 @@ public class ModEntityTickers {
                         if (random.nextBoolean()) {
                             level.addParticle(ModParticles.SMALL_DUST_CLOUD.get(),
                                     entity.getRandomX(1),
-                                    entity.getY() + Math.max(Math.min(random.nextFloat(), 0.3), 0.2),
+                                    entity.getY() + Math.clamp(random.nextFloat(), 0.2, 0.3),
                                     entity.getRandomZ(1),
                                     0,
                                     random.nextDouble(),
@@ -206,16 +204,15 @@ public class ModEntityTickers {
                         }
                     }
                 });
-        registerSimple(EntityType.TNT, false, () -> ENTITIES.explosives.tntSparks, (entity, level, random) -> {
-            level.addParticle(SparkParticle.create(SparkType.SHORT_LIFE, random),
-                    entity.getRandomX(0.5),
-                    entity.getY(1),
-                    entity.getRandomZ(0.5),
-                    nextNonAbsDouble(random, 0.01),
-                    nextNonAbsDouble(random, 0.01),
-                    nextNonAbsDouble(random, 0.01)
-            );
-        });
+        registerSimple(EntityType.TNT, false, () -> ENTITIES.explosives.tntSparks, (entity, level, random) ->
+                level.addParticle(SparkParticle.create(SparkType.SHORT_LIFE, random),
+                        entity.getRandomX(0.5),
+                        entity.getY(1),
+                        entity.getRandomZ(0.5),
+                        nextNonAbsDouble(random, 0.01),
+                        nextNonAbsDouble(random, 0.01),
+                        nextNonAbsDouble(random, 0.01)
+                ));
         registerSimple(EntityType.TNT, false, () -> ENTITIES.explosives.tntFlamesDensity.get() > 0, (entity, level, random) -> {
             if (random.nextInt(10) == 0) {
                 int density = ENTITIES.explosives.tntFlamesDensity.get();
@@ -275,6 +272,7 @@ public class ModEntityTickers {
         });
         registerSimple(EntityType.CREEPER, true, () -> ENTITIES.explosives.creeperSmoke.isEnabled(), (entity, level, random) -> {
             if (entity.isIgnited()) {
+                // noinspection ConstantConditions
                 level.addParticle(ENTITIES.explosives.creeperSmoke.getParticle().get(),
                         entity.getRandomX(1),
                         entity.getRandomY(),
